# recipe-tool

./: .gitignore  pyproject.toml
.claude/commands/: review-changes.md
apps/document-generator/: pyproject.toml
apps/document-generator/document_generator_app/: main.py  ui.py
apps/document-generator/document_generator_app/models/: outline.py
apps/document-generator/tests/ui/: test_components.py
shared/: README.md
shared/auth-components/: .env.example  README.md  pyproject.toml  quick_test.py  test_auth.py  test_auth_wsl.py  test_simple_auth.py
shared/auth-components/auth_components/: __init__.py  auth_manager.py  config.py
shared/gradio-auth-components/: pyproject.toml
shared/gradio-auth-components/gradio_auth_components/: __init__.py  auth_ui.py
shared/gradio-components/gradio_components/: __init__.py  config_manager.py  settings_sidebar.py
shared/onedrive-components/: pyproject.toml
shared/onedrive-components/onedrive_components/: __init__.py  models.py  onedrive_client.py
