[project]
name = "onedrive-components"
version = "0.1.0"
description = "Microsoft OneDrive integration components for Recipe Tool projects"
authors = [{ name = "MADE:Explorations Team" }]
license = "MIT"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "msgraph-core>=1.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["onedrive_components"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"